--- a/YamFront/views/index.ejs
+++ b/YamFront/views/index.ejs
@@ -18,7 +18,7 @@
   </a>
   <!-- 픽 고정배너-->
   <div id="container">
-    <%-include('partials/floatbanner.ejs');-%>
+    <%-include('partials/floatbanner.ejs', {products : recommends});-%>
     <div class="main_visual">
       <div class="slide">
         <ul>
@@ -56,55 +56,6 @@
         <% catbests.forEach(product => { %>
           <%- include('partials/product.ejs', {product : product} ); %>
         <% }) %>
-      </ul>
-      <div class="main_ani_best">
-        <div></div>
-        <div class="ani_best_title">
-          KNOWHOW
-        </div>
-        <button class="more_btn">more</button>
-      </div>
-      <ul class="ani_best">
-        <li>
-          <a href="#">
-            <div class="ani_product">
-              <img src="images/yam.svg" width="200px" height="200px" alt="얌이">
-              <div class="product_text">
-                <div class="product_title">얌이와의 설레는 아이컨택</div>
-              </div>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <div class="ani_product">
-              <img src="images/bom.svg" width="200px" height="200px" alt="얌이">
-              <div class="product_text">
-                <div class="product_title">봄이에게 모델포즈 시키는 법</div>
-              </div>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <div class="ani_product">
-              <img src="images/yam.svg" width="200px" height="200px" alt="얌이">
-              <div class="product_text">
-                <div class="product_title">과자를 바라보고 있는 얌</div>
-              </div>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <div class="ani_product">
-              <img src="images/bom.svg" width="200px" height="200px" alt="얌이">
-              <div class="product_text">
-                <div class="product_title">자기가 귀여운걸 아는게 분명해</div>
-              </div>
-            </div>
-          </a>
-        </li>
       </ul>
     </div>
     <!--베스트 영역-->
