Admin page 완성!!!!

--- a/YamAdmin/views/index.ejs
+++ b/YamAdmin/views/index.ejs
@@ -15,12 +15,12 @@
     <div class="wrap">
         <%- include partials/header_login.ejs -%>
         <div class="container">
-            <a href="/banner">1. 메인 배너 관리</a><br>
+            <a href="/product">1. 상품 추가, 삭제</a><br>
             <a href="/bomspick">2. BOM's pick 관리</a><br>
             <a href="/yamspick">3. YAM's pick 관리</a><br>
             <a href="/dogbest">4. DOG BEST 관리</a><br>
             <a href="/catbest">5. CAT BEST 관리</a><br>
-            <a href="/knowhow">6. NKOWHOW 관리</a><br>
+<!--            <a href="/knowhow">5. NKOWHOW 관리</a><br>-->
         </div>
     </div>
 </html>
