--- a/YamAdmin/views/pages/catbest.ejs
+++ b/YamAdmin/views/pages/catbest.ejs
@@ -10,6 +10,8 @@
 <body>
 <div class="wrap">
     <%- include ../partials/header_login.ejs -%>
+    <%- include ../partials/deleteprod.ejs -%>
+
     <div class="container">
         <div style="padding-bottom: 30px">
             <div class="index_title">
@@ -34,22 +36,7 @@
                 <% } %>
             </ol>
         </div>
-        <div>
-            <div class="banner_title">상품 추가</div>
-            <div class="add_img">
-                <div class="add_title">상품 이미지</div>
-                <input style="padding-top: 5px" type="file">
-            </div>
-            <div class="add_name">
-                <div class="add_title">상품명</div>
-                <input type="text">
-            </div>
-            <div class="add_price">
-                <div class="add_title">상품 가격</div>
-                <input type="text">
-            </div>
-        </div>
-        <button class="file_btn">상품등록</button>
+
     </div>
 </div>
 </body>
