--- a/YamAdmin/views/partials/deleteprod.ejs
+++ b/YamAdmin/views/partials/deleteprod.ejs
@@ -5,7 +5,7 @@
         })
         if(result.status === 200){
             alert('상품이 삭제되었습니다.')
-            location.href = '/bomspick';
+            location.href = '/product';
         }
         else{
             alert('삭제에 실패하였습니다.')
