--- a/YamFront/views/pages/product-info.ejs
+++ b/YamFront/views/pages/product-info.ejs
@@ -51,7 +51,7 @@
 
                         <div class="purchase_btn">
                             <button class="purchase_button" type="button">장바구니</button>
-                            <button class="purchase_button" style="background: #ffcb12" type="button">구매하기</button>
+                            <a href="<%= '/product/'+product.prodSeq + '/payment'%>"><button class="purchase_button" style="background: #ffcb12" type="button">구매하기</button></a>
                         </div>
                     </div>
                 </div>
