--- a/YamFront/views/pages/bomspick.ejs
+++ b/YamFront/views/pages/bomspick.ejs
@@ -3,7 +3,7 @@
 <head>
     <%-include('../partials/header.ejs');-%>
     <title>BOM's pick</title>
-    <link rel="stylesheet" href="../stylesheets/pick.css">
+    <link rel="stylesheet" href="/stylesheets/pick.css">
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 </head>
 <body>
@@ -20,7 +20,7 @@
             </div>
             <div class="profile">
                 <div class="profile_img">
-                    <img src="../images/bom2.svg" width="500px" height="500px" alt="봄이">
+                    <img src="/images/bom2.svg" width="500px" height="500px" alt="봄이">
                 </div>
                 <div class="profile_content">
                     <h4 style="margin: 0 0 20px 0">BOM's profile</h4>
