--- a/YamFront/views/pages/payment.ejs
+++ b/YamFront/views/pages/payment.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>봄이와 얌</title>
+    <link rel="stylesheet" href="/stylesheets/login.css">
     <%-include('../partials/header');-%>
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
