--- a/YamFront/views/pages/petinfo.ejs
+++ b/YamFront/views/pages/petinfo.ejs
@@ -3,7 +3,7 @@
 <head>
     <%-include('../partials/header.ejs');-%>
     <title>Pet Information</title>
-    <link rel="stylesheet" href="../stylesheets/petInfo.css">
+    <link rel="stylesheet" href="/stylesheets/petInfo.css">
 </head>
 <body>
 <div id="wrap">
