--- a/YamFront/views/pages/product-info.ejs
+++ b/YamFront/views/pages/product-info.ejs
@@ -3,8 +3,8 @@
 <head>
     <%-include('../partials/header.ejs');-%>
     <title>상품판매 페이지</title>
-    <link rel="stylesheet" href="../stylesheets/product.css">
-    <script type="text/javascript" src="../javascripts/product.js"></script>
+    <link rel="stylesheet" href="/stylesheets/product.css">
+    <script type="text/javascript" src="/javascripts/product.js"></script>
 </head>
 <body>
 <div id="wrap">
@@ -16,7 +16,7 @@
         <%-include('../partials/floatbanner.ejs');-%>
         <div class="purchase_product">
             <div class="purchase_category">
-                <div><img src="../images/homeicon.svg" alt="홈아이콘"></div>
+                <div><img src="/images/homeicon.svg" alt="홈아이콘"></div>
                 <div>&nbsp>&nbsp강아지&nbsp>&nbsp사료&nbsp>&nbsp간식</div>
             </div>
             <div class="purchase_info">
@@ -32,8 +32,8 @@
                     <div style="color: #00ffba">택배 배송</div>
                     <div class="color_font">16시 이전 결제시 당일 출고 예정</div>
                     <div class="delivery_info">
-                        <div class="purchase_icon"><img src="../images/box.svg" alt="택배">재고있음</div>
-                        <div class="purchase_icon"><img src="../images/truck.svg" alt="트럭">무료배송</div>
+                        <div class="purchase_icon"><img src="/images/box.svg" alt="택배">재고있음</div>
+                        <div class="purchase_icon"><img src="/images/truck.svg" alt="트럭">무료배송</div>
                     </div>
                     <div class="purchase_box">
                         <div class="space_between">
