--- a/YamFront/views/pages/pw-reset.ejs
+++ b/YamFront/views/pages/pw-reset.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>login</title>
-    <link rel="stylesheet" href="../stylesheets/login.css">
+    <link rel="stylesheet" href="/stylesheets/login.css">
     <%-include('../partials/header.ejs');-%>
 </head>
 <body>
