--- a/YamFront/views/pages/signin.ejs
+++ b/YamFront/views/pages/signin.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>login</title>
-    <link rel="stylesheet" href="../stylesheets/login.css">
+    <link rel="stylesheet" href="/stylesheets/login.css">
     <%-include('../partials/header.ejs');-%>
 </head>
 <body>
@@ -27,7 +27,7 @@
 
         </div>
         <a href="/auth/signup" class="login_img">
-            <img src="../images/joinLink.svg" alt="회원가입창 이동">
+            <img src="/images/joinLink.svg" alt="회원가입창 이동">
         </a>
     </div>
     <%-include('../partials/footer.ejs');-%>
