--- a/YamFront/views/partials/floatbanner.ejs
+++ b/YamFront/views/partials/floatbanner.ejs
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="../javascripts/floatbanner.js"></script>
+<script type="text/javascript" src="/javascripts/floatbanner.js"></script>
 <div class="float_area">
     <div class="float_menu">
         <div class="side_banner">
