--- a/YamFront/views/partials/nav.ejs
+++ b/YamFront/views/partials/nav.ejs
@@ -42,7 +42,7 @@
         <div></div>
         <h1 class="logo">
             <a class="logo_text" href="/">
-                <img src="../images/logo.svg" alt="메인페이지 로고">
+                <img src="/images/logo.svg" alt="메인페이지 로고">
                 <div class="logo_text">BOM and YAM</div>
             </a>
         </h1>
