--- a/YamFront/views/pages/best.ejs
+++ b/YamFront/views/pages/best.ejs
@@ -3,9 +3,9 @@
 <head>
     <%-include('../partials/header.ejs');-%>
     <title>봄이와 얌</title>
-    <link rel="stylesheet" href="../stylesheets/best.css">
+    <link rel="stylesheet" href="/stylesheets/best.css">
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="../javascripts/best.js"></script>
+    <script src="/javascripts/best.js"></script>
 </head>
 <body>
 <div id="wrap">
