--- a/YamFront/views/pages/yamspick.ejs
+++ b/YamFront/views/pages/yamspick.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <%-include('../partials/header.ejs');-%>
-    <link rel="stylesheet" href="../stylesheets/pick.css">
+    <link rel="stylesheet" href="/stylesheets/pick.css">
     <title>YAM's pick</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
             </div>
             <div class="profile">
                 <div class="profile_img">
-                    <img src="../images/yam2.svg" width="500px" height="500px" alt="봄이">
+                    <img src="/images/yam2.svg" width="500px" height="500px" alt="봄이">
                 </div>
                 <div class="profile_content">
                     <h4 style="margin: 0 0 20px 0">YAM's profile</h4>
