--- a/YamFront/views/partials/header.ejs
+++ b/YamFront/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
-<link rel="stylesheet" href="../stylesheets/main.css">
-<link rel="stylesheet" href="../stylesheets/floatbanner.css">
-<link rel="stylesheet" href="../stylesheets/pick_icon.css">
-<script type="text/javascript" src="javascripts/main.js"></script>
+<link rel="stylesheet" href="/stylesheets/main.css">
+<link rel="stylesheet" href="/stylesheets/floatbanner.css">
+<link rel="stylesheet" href="/stylesheets/pick_icon.css">
+<script type="text/javascript" src="/javascripts/main.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
