modify banner error

--- a/YamFront/views/index.ejs
+++ b/YamFront/views/index.ejs
@@ -5,11 +5,14 @@
   <%-include('partials/header.ejs');-%>
   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+  <script src="/javascripts/main.js"></script>
+  <script src="/javascripts/floatbanner.js"></script>
 </head>
 <body>
 <div id="wrap">
   <%-include('partials/nav.ejs',{categories});-%>
   <!--헤더-->
+  <%- include('partials/floatbanner.ejs'); -%>
   <a href="/signaturepick/bom">
     <div class="BOM_icon">BOM's pick</div>
   </a>
