- Add Cat Best page

--- a/YamFront/views/index.ejs
+++ b/YamFront/views/index.ejs
@@ -40,7 +40,7 @@
         <div class="ani_best_title">
           DOG BEST
         </div>
-        <button class="more_btn">more</button>
+        <a href="/best/dog"> <button class="more_btn">more</button></a>
       </div>
       <ul class="ani_best">
         <% dogbests.forEach(product => { %>
@@ -52,7 +52,7 @@
         <div class="ani_best_title">
           CAT BEST
         </div>
-        <button class="more_btn">more</button>
+        <a href="/best/cat"> <button class="more_btn">more</button></a>
       </div>
       <ul class="ani_best">
         <% catbests.forEach(product => { %>
