--- a/YamFront/views/pages/catbest.ejs
+++ b/YamFront/views/pages/catbest.ejs
@@ -16,14 +16,14 @@
         <%-include('../partials/floatbanner.ejs');-%>
         <div class="tab_menu">
             <ul class="tab_title">
-                <a href="/best/dog"> <li class="tab_btn current">DOG</li></a>
-                <a href="/best/cat"> <li class="tab_btn">CAT</li></a>
+                <a href="/best/dog"> <li class="tab_btn" >DOG</li></a>
+                <a href="/best/cat"> <li class="tab_btn current" >CAT</li></a>
             </ul>
             <div id="tab-2" class="tab_content current">
                 <div class="main_ani_best">
                     <div></div>
                     <div class="ani_best_title">
-                        DOG BEST
+                        CAT BEST
                     </div>
                     <div></div>
                 </div>
