title icon 수정, title 수정

--- a/YamFront/views/pages/best.ejs
+++ b/YamFront/views/pages/best.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <%-include('../partials/header.ejs');-%>
-    <title>봄이와 얌</title>
+    <title>BEST</title>
     <link rel="stylesheet" href="/stylesheets/best.css">
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="/javascripts/best.js"></script>
