--- a/YamFront/views/pages/payment.ejs
+++ b/YamFront/views/pages/payment.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>봄이와 얌</title>
+    <title>Payment</title>
     <link rel="stylesheet" href="/stylesheets/login.css">
     <%-include('../partials/header');-%>
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
