--- a/YamFront/views/pages/product-list.ejs
+++ b/YamFront/views/pages/product-list.ejs
@@ -30,7 +30,7 @@
     }
 </script>
 <head>
-    <title>category</title>
+    <title>상품 목록</title>
     <link rel="stylesheet" href="/stylesheets/category.css">
     <%- include('../partials/header.ejs'); -%>
 <body>
