--- a/YamFront/views/partials/header.ejs
+++ b/YamFront/views/partials/header.ejs
@@ -2,5 +2,6 @@
 <link rel="stylesheet" href="/stylesheets/main.css">
 <link rel="stylesheet" href="/stylesheets/floatbanner.css">
 <link rel="stylesheet" href="/stylesheets/pick_icon.css">
+<link rel="shortcut icon" type="image⁄x-icon" href="/images/yam_logo.png">
 <script type="text/javascript" src="/javascripts/main.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
