--- a/YamFront/views/pages/pw-reset.ejs
+++ b/YamFront/views/pages/pw-reset.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>login</title>
+    <title>비밀번호 재설정</title>
     <link rel="stylesheet" href="/stylesheets/login.css">
     <%-include('../partials/header.ejs');-%>
 </head>
