--- a/YamFront/views/pages/signup.ejs
+++ b/YamFront/views/pages/signup.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>join</title>
+    <title>회원가입</title>
     <link rel="stylesheet" href="/stylesheets/login.css">
     <%- include('../partials/header.ejs'); -%>
 </head>
