결제하기 페이지

--- a/YamFront/views/pages/payment.ejs
+++ b/YamFront/views/pages/payment.ejs
@@ -19,7 +19,15 @@
     </a>
     <!-- 픽 고정배너-->
     <div id="container">
-
+        <div class="login_text">결제하기</div>
+        <div class="login_box">
+            <div class="item login_txt">상품번호 : </div>
+            <div class="item login_txt">수량 : </div>
+            <div class="item login_txt">상품가격 : </div>
+            <div class="item login_txt">배달비 : </div>
+            <div class="item login_txt">총 가격 : </div>
+            <button type="submit" class="item log_box">결제하기</button>
+        </div>
     </div>
     <!--컨테이너 영역-->
     <%-include('../partials/footer.ejs');-%>
