-page error fixed!

--- a/YamFront/views/pages/signin.ejs
+++ b/YamFront/views/pages/signin.ejs
@@ -16,8 +16,8 @@
         <div class="login_box">
             <div class="item login_txt">회원 로그인</div>
             <form action="/auth/signin" method="post">
-                <input type="text" class="item id_box" name="email" placeholder="아이디(이메일)"></input>
-                <input type="text" class="item pwd_box" name="pw" placeholder="비밀번호"></input>
+                <input type="email" class="item id_box" name="email" placeholder="아이디(이메일)">
+                <input type="password" class="item pwd_box" name="pw" placeholder="비밀번호">
             <button type="submit" class="item log_box">로그인</button>
             </form>
             <label>
