--- a/YamFront/views/partials/nav.ejs
+++ b/YamFront/views/partials/nav.ejs
@@ -59,7 +59,6 @@
                     <div id="on-login">
                         <span id="welcome_msg" style="padding-right: 25px"></span>
                         <button onclick="logout();" style="padding-right: 15px">로그아웃</button>
-                        <a href="#">장바구니</a>
                     </div>
                 </li>
             </ul>
@@ -80,10 +79,10 @@
             </div>
             <ul class="navi_list">
                 <li style="padding-right: 25px">
-                    <a href="/best">베스트</a>
+                    <a href="/best/dog">강아지 베스트</a>
                 </li>
                 <li>
-                    <a href="#">노하우</a>
+                    <a href="/best/cat">고양이 베스트</a>
                 </li>
             </ul>
         </div>
